# sample-ds-repo

./: Justfile  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/data_pull/: data_pull.py  query_1.sql  query_1_test.py
src/feat_engg/: feat_engg.py  feat_engg_1.py  feat_engg_1_test.py  feat_engg_2.py  feat_engg_2_test.py
