[project]
name = "demo"
version = "0.1"
description = ""
authors = [
    {name = "", email = "vasanth260m12@gmail.com"},
]
dependencies = [
    "polars>=0.19.19",
    "arrow-odbc>=2.0.2",
    "jinja2>=3.1.2",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "python-lsp-server>=1.9.0",
    "python-lsp-ruff>=2.0.0",
    "pylsp-mypy>=0.6.8",
    "pytest>=7.4.3",
    "sqlfluff>=2.3.5",
]
